# sentiric-sip-uac

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  pubspec.yaml  test_ivr.json
.github/workflows/: docker-publish.yml  release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/ai/sentiric/sentiric_mobile_sip_uac/: MainActivity.kt
android/app/src/main/kotlin/ai/sentiric/sentiric_sip_uac/: MainActivity.kt
docs/: TESTING.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  models.dart  telecom_telemetry.dart
lib/controllers/: call_controller.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
lib/ui/screens/: dashboard_screens.dart  dialer_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
scenarios/: 01_immediate_hangup.json  02_rapid_dtmf.json  03_long_call.json  04_ghost_call.json
scripts/: resilience_suite.sh
src/: client.rs  main.rs  scenario.rs
test/: widget_test.dart
