[package]
name = "sentiric-sip-uac"
version = "2.1.0"
edition = "2021"
description = "CLI Shell for Sentiric SIP UAC - Powered by Telecom Client SDK."
authors = ["Sentiric Team"]
license = "AGPL-3.0"

[dependencies]
sentiric-telecom-client-sdk = { git = "https://github.com/sentiric/sentiric-telecom-client-sdk.git", tag = "v0.2.6" }

# --- Utilities ---
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"