[package]
name = "sentiric-sip-uac"
version = "2.4.2"
edition = "2021"
description = "Sentiric Field Test CLI (Headless/Hardware SIP UAC)"
authors = ["Sentiric Team"]
license = "AGPL-3.0"

[dependencies]
# [KRİTİK GÜNCELLEME] v0.3.15'i işaret ediyoruz.
sentiric-telecom-client-sdk = { git = "https://github.com/sentiric/sentiric-telecom-client-sdk.git", tag = "v0.3.22" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] } # [NEW]: Argüman parse işlemini profesyonelleştirelim

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"