[package]
name = "mobile_uac"
version = "0.2.6"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# [KRİTİK GÜNCELLEME] v0.3.15'i işaret ediyoruz.
sentiric-telecom-client-sdk = { git = "https://github.com/sentiric/sentiric-telecom-client-sdk.git", tag = "v0.3.17" }

flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
android_logger = "0.13"
log = "0.4"
lazy_static = "1.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.21.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"