# Dosya: sentiric-sip-uac/rust/Cargo.toml
[package]
name = "uac"
# [VERSION BUMP]: 0.2.16 -> 0.2.17
version = "0.2.17"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
sentiric-telecom-client-sdk = { git = "https://github.com/sentiric/sentiric-telecom-client-sdk.git", tag = "v0.3.44" }

flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
android_logger = "0.13"
env_logger = "0.11"
log = "0.4"
lazy_static = "1.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.21.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"